Stupid card bump.

--- a/README
+++ b/README
@@ -14,3 +14,7 @@ blatant disregard for rule 205.3c.
 
 Wins a prize for having the same exact ability multiple times.
 Besides messing with my table schema, this seems like a usability fail.
+
+* Mishra's Factory
+
+Simultaneously a rare and an uncommon in the same set.
